package com.HailoOSS.service.login;

message KeyValue {
	required string key = 1;
	required string value = 2;
}
